add book model and route, plus all books - Full Stack Web Dev Course 7/13

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -2,8 +2,10 @@
     <nav>
         <a href="/">Nomad Sauce</a>
         <ul>
-            <li><a href="/authors">Authors</a></li>
-            <li><a href="/authors/new">Add Author</a></li>
+            <li><a href="/authors">All Authors</a></li>
+            <li><a href="/authors/new">Add New Author</a></li>
+            <li><a href="/books">All Books</a></li>
+            <li><a href="/books/new">Add New Book</a></li>
         </ul>
     </nav>
 </header>
